--- a/view/brand-list.html
+++ b/view/brand-list.html
@@ -25,25 +25,25 @@
 <div class="k-blist-main">
   <a class="k-brand-row" href="brand-shop.html">
     <div class="k-brand-imgbox">
-      <img src="https://hbimg.huabanimg.com/d965bdc37993dc31ec631f4f393cb6773af6281165800-rGsHrn_fw658">
+      <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1564573717668&di=c1431976108b3a93857208d6ec219779&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fblog%2F201410%2F20%2F20141020151211_s2CKZ.jpeg">
     </div>
     <div class="k-brand-text">耐克</div>
   </a>
   <a class="k-brand-row" href="brand-shop.html">
     <div class="k-brand-imgbox">
-      <img src="https://hbimg.huabanimg.com/d965bdc37993dc31ec631f4f393cb6773af6281165800-rGsHrn_fw658">
+      <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1564573717668&di=c1431976108b3a93857208d6ec219779&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fblog%2F201410%2F20%2F20141020151211_s2CKZ.jpeg">
     </div>
     <div class="k-brand-text">耐克</div>
   </a>
   <a class="k-brand-row" href="brand-shop.html">
     <div class="k-brand-imgbox">
-      <img src="https://hbimg.huabanimg.com/d965bdc37993dc31ec631f4f393cb6773af6281165800-rGsHrn_fw658">
+      <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1564573717668&di=c1431976108b3a93857208d6ec219779&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fblog%2F201410%2F20%2F20141020151211_s2CKZ.jpeg">
     </div>
     <div class="k-brand-text">耐克</div>
   </a>
   <a class="k-brand-row" href="brand-shop.html">
     <div class="k-brand-imgbox">
-      <img src="https://hbimg.huabanimg.com/d965bdc37993dc31ec631f4f393cb6773af6281165800-rGsHrn_fw658">
+      <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1564573717668&di=c1431976108b3a93857208d6ec219779&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fblog%2F201410%2F20%2F20141020151211_s2CKZ.jpeg">
     </div>
     <div class="k-brand-text">耐克</div>
   </a>
