--- a/css/common.css
+++ b/css/common.css
@@ -24,7 +24,7 @@
     width: 100%;
     height: .42rem;
     line-height: .42rem;
-    font-size: 0.14rem;
+    font-size: 0.15rem;
     text-align: center;
     border-bottom: 1px #41a0ec solid;
     background-color: #04A8FB;
@@ -82,12 +82,13 @@
 .k-article-nav {
     display: flex;
     overflow-x: auto;
-    font-size: .14rem;
+    font-size: .15rem;
     background: white;
     position: fixed;
     top:.42rem ;
     width: 100%;
     max-width: 640px;
+    z-index: 9999;
 }
 
 .k-article-nav li{
@@ -125,7 +126,7 @@
     align-items: center;
     justify-content: space-between;
     padding: .15rem;
-    font-size: .13rem;
+    font-size: .15rem;
     border-bottom: 1px solid #ECECEC;
     background: white;
 }
