--- a/blob/pc/view/index.html
+++ b/blob/pc/view/index.html
@@ -133,7 +133,7 @@
         <!--文章主体-->
         <ul class="fly-list">
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -152,7 +152,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -171,7 +171,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -190,7 +190,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -209,7 +209,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -228,7 +228,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -247,7 +247,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -266,7 +266,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="./sub/detail.html">
               <div class="fly-avatar">
                 <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
               </div>
@@ -304,7 +304,7 @@
         <h3 class="fly-panel-title">重点推荐</h3>
         <ul class="fly-panel-main fly-list-static">
           <li>
-            <a href="http://fly.layui.com/jie/4281/">layui 的 GitHub 及 Gitee (码云) 仓库，欢迎Star</a>
+            <a href="#">layui 的 GitHub 及 Gitee (码云) 仓库，欢迎Star</a>
           </li>
           <li>
             <a href="http://fly.layui.com/jie/5366/">
