--- a/blob/pc/view/sub/detail.html
+++ b/blob/pc/view/sub/detail.html
@@ -130,10 +130,10 @@
         <h3 class="fly-panel-title">重点推荐</h3>
         <ul class="fly-panel-main fly-list-static">
           <li>
-            <a href="http://fly.layui.com/jie/4281/" >layui 的 GitHub 及 Gitee (码云) 仓库，欢迎Star</a>
+            <a href="#" >layui 的 GitHub 及 Gitee (码云) 仓库，欢迎Star</a>
           </li>
           <li>
-            <a href="http://fly.layui.com/jie/5366/" >
+            <a href="#" >
               layui 常见问题的处理和实用干货集锦
             </a>
           </li>
