--- a/blob/pc/view/sub/software.html
+++ b/blob/pc/view/sub/software.html
@@ -209,11 +209,11 @@
       <div class="fly-panel fly-link">
         <h3 class="fly-panel-title">友情链接</h3>
         <dl class="fly-panel-main">
-          <dd><a href="http://www.layui.com/" >layui</a></dd>
-          <dd><a href="http://www.layui.com/" >护肤网</a></dd>
-          <dd><a href="http://www.layui.com/" >水果网</a></dd>
-          <dd><a href="http://www.layui.com/" >淘宝</a></dd>
-          <dd><a href="http://www.layui.com/"  class="fly-link">申请友链</a></dd>
+          <dd><a href="#" >layui</a></dd>
+          <dd><a href="#" >护肤网</a></dd>
+          <dd><a href="#" >水果网</a></dd>
+          <dd><a href="#" >淘宝</a></dd>
+          <dd><a href="#"  class="fly-link">申请友链</a></dd>
         </dl>
       </div>
 
