--- a/blob/pc/view/other/notice.html
+++ b/blob/pc/view/other/notice.html
@@ -55,18 +55,8 @@
   </li>
 </ul>
 
-<script src="../../plugin/layui/layui.all.js"></script>
-<script>
-  ;!function () {
-    var $ = layui.$;//内置jQuery
-
-    //返回上一页
-    $('.fly-go-back').on('click',function () {
-      window.history.go(-1);
-    });
-
-  }();
-</script>
+<script src="../../plugin/layui/layui.js"></script>
+<script src="../../js/common.js"></script>
 
 </body>
 </html>
