--- a/blob/pc/view/user/collect.html
+++ b/blob/pc/view/user/collect.html
@@ -82,20 +82,25 @@
       </ul>
       <div class="layui-tab-content" style="padding: 20px 0;">
         <div class="layui-tab-item layui-show">
-          <ul class="mine-view jie-row">
+          <ul class="mine-view jie-row fly-collect-box">
             <li>
-              <a class="jie-title" href="detail.html" >基于 layui 的极简社区页面模版</a>
-              <i>2017/3/14 上午8:30:00</i>
-              <em class="layui-hide-xs">浏览量:99</em>
+              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
+              <i class="layui-hide-xs">2017/3/14 8:30:00</i>
+              <em>浏览量:99</em>
             </li>
-          </ul>
-          <div id="LAY_page"></div>
-        </div>
-        <div class="layui-tab-item">
-          <ul class="mine-view jie-row">
             <li>
-              <a class="jie-title" href="detail.html" >基于 layui 的极简社区页面模版</a>
-              <i>收藏于23小时前</i></li>
+              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
+              <i class="layui-hide-xs">2017/3/14 8:30:00</i>
+              <em>浏览量:99</em>
+            </li>
+            <li>
+              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
+              <i class="layui-hide-xs">2017/3/14 8:30:00</i>
+              <em>浏览量:99</em>
+            </li>
           </ul>
         </div>
       </div>
@@ -116,23 +121,8 @@
   </p>
 </div>
 
-<script src="../../plugin/layui/layui.all.js"></script>
-<script>
-  ;!function () {
-    var $ = layui.$;//内置jQuery
+<script src="../../plugin/layui/layui.js"></script>
+<script src="../../js/common.js"></script>
 
-    var treeMobile = $('.site-tree-mobile'), shadeMobile = $('.site-mobile-shade');
-
-    treeMobile.on('click', function () {
-      $('body').addClass('site-mobile');
-    });
-
-    shadeMobile.on('click', function () {
-      $('body').removeClass('site-mobile');
-    });
-
-  }();
-
-</script>
 </body>
 </html>
