--- a/blob/pc/view/user/set.html
+++ b/blob/pc/view/user/set.html
@@ -152,23 +152,8 @@
   </p>
 </div>
 
-<script src="../../plugin/layui/layui.all.js"></script>
-<script>
-  ;!function () {
-    var $ = layui.$;//内置jQuery
+<script src="../../plugin/layui/layui.js"></script>
+<script src="../../js/common.js"></script>
 
-    var treeMobile = $('.site-tree-mobile'), shadeMobile = $('.site-mobile-shade');
-
-    treeMobile.on('click', function () {
-      $('body').addClass('site-mobile');
-    });
-
-    shadeMobile.on('click', function () {
-      $('body').removeClass('site-mobile');
-    });
-
-  }();
-
-</script>
 </body>
 </html>
