--- a/blob/pc/css/global.css
+++ b/blob/pc/css/global.css
@@ -97,6 +97,7 @@ pre{padding: 10px 15px; margin: 10px 0; font-size: 12px; border-left: 6px solid 
 .fly-clear{clear: both}
 .fly-clear:after{content: "";display: block;clear: both}
 .fly-margin-t20{margin-top: 20px;}
+.fly-margin-b0{margin-bottom: 0!important;}
 
 .fly-link{color: #01AAED;}
 .fly-link:hover{color: #5FB878;}
@@ -190,7 +191,7 @@ pre{padding: 10px 15px; margin: 10px 0; font-size: 12px; border-left: 6px solid 
 .fly-panel-title{position: relative; height: 50px; line-height: 50px; padding: 0 15px; border-bottom: 1px dotted #E9E9E9; color: #333; border-radius: 2px 2px 0 0; font-size: 14px;}
 .fly-panel-main{padding: 10px 15px;}
 .fly-banner{}
-.fly-banner img{width: 100%}
+.fly-banner img{width: 100%;height: 100%;}
 .fly-banner .layui-carousel-ind{top: -25px;}
 .fly-banner .layui-carousel-ind ul{background: none;}
 .fly-banner .layui-carousel-ind ul li{width: 25px; height: 3px; border-radius: 0;}
