--- a/blob/pc/view/other/404.html
+++ b/blob/pc/view/other/404.html
@@ -118,17 +118,8 @@
   </p>
 </div>
 
-<script src="../../plugin/layui/layui.all.js"></script>
-<script>
-  ;!function () {
-    var $ = layui.$;//内置jQuery
+<script src="../../plugin/layui/layui.js"></script>
+<script src="../../js/common.js"></script>
 
-    //返回上一页
-    $('.fly-go-back').on('click',function () {
-      window.history.go(-1);
-    });
-
-  }();
-</script>
 </body>
 </html>
