--- a/blob/pc/view/sub/detail.html
+++ b/blob/pc/view/sub/detail.html
@@ -101,7 +101,7 @@
     <div class="layui-col-md8">
 
       <!--文章内容-->
-      <div class="fly-panel">
+      <div class="fly-panel fly-margin-b0">
 
         <!--文章主体-->
         <div class="fly-detail-news">
@@ -224,48 +224,8 @@
   </p>
 </div>
 
-<script src="../../plugin/layui/layui.all.js"></script>
-<script>
-  ;!function () {
-    var $ = layui.$;//内置jQuery
-
-    //弹出框
-    var layer = layui.layer;
-    $('.fly-search').on('click', function () {
-      layer.open({
-        type: 1,
-        title: false,
-        closeBtn: false,
-        shadeClose: true,
-        maxWidth: 10000,
-        skin: 'fly-layer-search',
-        content: ['<form action="http://cn.bing.com/search">', '<input autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">', '</form>'].join(''),
-        success: function (layero) {
-          var input = layero.find('input');
-          input.focus();
-          layero.find('form').submit(function () {
-            var val = input.val();//input的值
-            if (val.replace(/\s/g, '') === '') {
-              return false;//为空则返回
-            }
-            input.val('site:layui.com ' + input.val());
-          });
-        }
-      })
-    });
-
-    //回到顶部
-    $('.fly-go-top').on('click',function () {
-      $('html , body').animate({scrollTop: 0},'fast');
-    });
-
-    //返回上一页
-    $('.fly-go-back').on('click',function () {
-      window.history.go(-1);
-    });
-
-  }();
-</script>
+<script src="../../plugin/layui/layui.js"></script>
+<script src="../../js/common.js"></script>
 
 </body>
 </html>
