--- a/blob/pc/css/global.css
+++ b/blob/pc/css/global.css
@@ -145,9 +145,10 @@ pre{padding: 10px 15px; margin: 10px 0; font-size: 12px; border-left: 6px solid 
 /* 头部 */
 .fly-header{position: fixed; left: 0; top: 0; z-index: 10000; width: 100%; height: 60px; border-bottom: 1px solid #404553; border-right: 1px solid #404553; border-radius: 0;}
 .fly-logo{position: absolute; left: 15px; top: 11px;}
-.fly-name{position: absolute; left: 15px; top: 11px;font-size: 32px;font-weight: bold;color: #009688;height: 40px;line-height: 40px;display: block}
-.fly-name i{font-size: 32px;display: inline-block;width: 32px;}
+.fly-name{position: absolute; left: 15px; top: 11px;font-size: 32px;font-weight: bold;color: #0cc5b6;height: 40px;line-height: 40px;display: block}
+.fly-name i{font-size: 28px;display: inline-block;width: 32px;}
 .fly-name span{font-size: 30px;vertical-align: 3px}
+.fly-name img{width: 100px;vertical-align: -05px;}
 .fly-nav{margin-left: 200px;}
 .fly-nav a i{position: absolute; left: 25px; top: 0; padding-right: 10px; font-size: 26px;}
 .fly-nav a .icon-shouye, .nav a .icon-shezhi{top: 2px;}
