--- a/blob/pc/view/user/set.html
+++ b/blob/pc/view/user/set.html
@@ -16,8 +16,7 @@
 
     <!--logo-->
     <a class="fly-name" href="../index.html" style="" title="首页">
-      <i class="layui-icon">&#xe68e;</i>
-      99羊毛
+      <i class="layui-icon">&#xe68e;</i><img src="../../images/logo.png">
     </a>
 
     <!--重要链接-->
