--- a/blob/pc/view/sub/detail.html
+++ b/blob/pc/view/sub/detail.html
@@ -110,11 +110,21 @@
               <span>时间：2019-12-02 14:17</span>
               <span>浏览：230 次</span>
               <span>发布者：qq：3010548716</span>
+              <span>收藏文章<i class="layui-icon layui-icon-rate fly-news-collect-icon"></i></span>
             </p>
           </div>
           <div class="fly-detail-news-content">
             <p>现象是如果上传10个文件，由于每个文件的进度是独立的，但是由于使用下方的代码，会导致10个进度条同时被更新，开发者应该能理解我说的意思</p>
+            <p>现象是如果上传10个文件，由于每个文件的进度是独立的，但是由于使用下方的代码，会导致10个进度条同时被更新，开发者应该能理解我说的意思</p>
+            <p>现象是如果上传10个文件，由于每个文件的进度是独立的，但是由于使用下方的代码，会导致10个进度条同时被更新，开发者应该能理解我说的意思</p>
             <img src="../../images/test/banner.jpg">
+          </div>
+          <div class="fly-news-footer fly-clear">
+            <div class="fly-news-pay">
+              <span>如果觉得文章不错，可以通过支付宝或微信打赏我们，由衷感谢你的每一份付出！</span>
+              <img src="../../images/test/pay.jpg">
+              <img src="../../images/test/pay.jpg">
+            </div>
           </div>
         </div>
       </div>
