--- a/blob/pc/view/user/collect.html
+++ b/blob/pc/view/user/collect.html
@@ -83,19 +83,25 @@
         <div class="layui-tab-item layui-show">
           <ul class="mine-view jie-row fly-collect-box">
             <li>
-              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <i class="layui-icon layui-icon-rate-solid fly-collect-icon"></i>
               <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
               <i class="layui-hide-xs">2017/3/14 8:30:00</i>
               <em>浏览量:99</em>
             </li>
             <li>
-              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <i class="layui-icon layui-icon-rate-solid fly-collect-icon"></i>
               <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
               <i class="layui-hide-xs">2017/3/14 8:30:00</i>
               <em>浏览量:99</em>
             </li>
             <li>
-              <i class="layui-icon layui-icon-rate-solid" style="font-size: 26px; color: #ff7997;margin-right: 10px;"></i>
+              <i class="layui-icon layui-icon-rate-solid fly-collect-icon"></i>
+              <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
+              <i class="layui-hide-xs">2017/3/14 8:30:00</i>
+              <em>浏览量:99</em>
+            </li>
+            <li>
+              <i class="layui-icon layui-icon-rate-solid fly-collect-icon"></i>
               <a class="jie-title" href="../sub/detail.html" >基于 layui 的极简社区页面模版</a>
               <i class="layui-hide-xs">2017/3/14 8:30:00</i>
               <em>浏览量:99</em>
