--- a/blob/pc/view/sub/detail.html
+++ b/blob/pc/view/sub/detail.html
@@ -129,6 +129,76 @@
         </div>
       </div>
 
+      <!--文章评论评论-->
+      <div class="fly-panel fly-margin-t20 detail-box layui-hide-xs" >
+        <fieldset class="layui-elem-field layui-field-title" style="text-align: center;">
+          <legend>文章评论</legend>
+        </fieldset>
+
+        <ul class="jieda " id="jieda">
+          <li class="jieda-daan">
+            <div class="detail-about detail-about-reply">
+              <a class="fly-avatar" href="">
+                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt=" ">
+              </a>
+              <div class="fly-detail-user">
+                <a href="" class="fly-link">
+                  <cite>贤心</cite>
+                </a>
+                <span>(楼主)</span>
+              </div>
+
+              <div class="detail-hits">
+                <span>2017-11-30</span>
+              </div>
+            </div>
+            <div class="detail-body jieda-body photos">
+              <p>香菇那个蓝瘦，这是一条被采纳的回帖</p>
+            </div>
+          </li>
+          <li class="jieda-daan">
+            <div class="detail-about detail-about-reply">
+              <a class="fly-avatar" href="">
+                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt=" ">
+              </a>
+              <div class="fly-detail-user">
+                <a href="" class="fly-link">
+                  <cite>贤心</cite>
+                </a>
+                <span>(楼主)</span>
+              </div>
+              <div class="detail-hits">
+                <span>2017-11-30</span>
+              </div>
+            </div>
+            <div class="detail-body jieda-body photos">
+              <p>香菇那个蓝瘦，这是一条被采纳的回帖</p>
+            </div>
+          </li>
+           <!-- 无数据时 -->
+           <!--<li class="fly-none">暂无评论</li>-->
+        </ul>
+        <div class="fly-center">
+          <div class="laypage-main">
+            <!--用ajax，在本页面尾部继续加载-->
+            <a href="" class="laypage-next">查看110条热评</a>
+          </div>
+        </div>
+
+        <div class="layui-form layui-form-pane layui-hide-xs">
+          <form action="" method="post">
+            <div class="layui-form-item layui-form-text">
+              <div class="layui-input-block">
+                <textarea name="content"  placeholder="请输入内容"  class="layui-textarea fly-editor" style="height: 150px;"></textarea>
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <button class="layui-btn"  lay-submit>提交评论</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
     </div>
 
     <!--右边-->
@@ -204,6 +274,12 @@
           <dd><a href="#" >淘宝</a></dd>
           <dd><a href="#"  class="fly-link">申请友链</a></dd>
         </dl>
+      </div>
+
+      <!--粉丝群-->
+      <div class="fly-panel fly-us-code" style="">
+        <img src="../../images/test/pay.jpg" alt="99羊毛">
+        <p>QQ 扫码加入 99羊毛官方群</p>
       </div>
 
     </div>
