--- a/blob/pc/view/sub/software.html
+++ b/blob/pc/view/sub/software.html
@@ -216,6 +216,12 @@
         </dl>
       </div>
 
+      <!--粉丝群-->
+      <div class="fly-panel fly-us-code" style="">
+        <img src="../../images/test/pay.jpg" alt="99羊毛">
+        <p>QQ 扫码加入 99羊毛官方群</p>
+      </div>
+
     </div>
 
   </div>
