--- a/blob/pc/view/index.html
+++ b/blob/pc/view/index.html
@@ -379,6 +379,12 @@
         </dl>
       </div>
 
+      <!--加入qq粉丝群-->
+      <div class="fly-panel fly-us-code" style="">
+        <img src="../images/test/pay.jpg" alt="99羊毛">
+        <p>QQ 扫码加入 99羊毛官方群</p>
+      </div>
+
     </div>
 
   </div>
