--- a/blob/pc/css/global.css
+++ b/blob/pc/css/global.css
@@ -514,7 +514,7 @@ body .fly-user-main{position: relative; min-height: 600px;}
 
 /* 广告 */
 .fly-ad{position: relative; background-color: #f2f2f2; overflow:hidden;}
-.fly-ad:before{content: '广告位'; position: absolute; z-index: 0; top: 50%; left: 50%; left: 50%; margin: -10px 0 0 -25px; color: #aaa; font-size: 18px; font-weight: 300;}
+.fly-ad:before{content: '广告位'; position: absolute; z-index: 0; top: 50%; left: 50%; margin: -10px 0 0 -25px; color: #aaa; font-size: 18px; font-weight: 300;}
 .fly-ad div{position: relative; z-index: 1;}
 
 /* 友链 */
@@ -529,7 +529,7 @@ body .fly-user-main{position: relative; min-height: 600px;}
 .fly-detail-news-content{font-size: 16px;line-height: 30px;padding: 20px 0}
 .fly-detail-news-content img{max-width: 100%}
 .fly-news-footer{min-height: 60px;}
-.fly-news-pay{float: left;}
+.fly-news-pay{margin-top: 20px;}
 .fly-news-pay span{width: 300px;display: inline-block;line-height: 25px;margin-right: 10px;}
 .fly-news-pay img{width: 60px;height: 60px;margin-right: 10px;vertical-align: top}
 
