增加文章数据库模型

--- a/blogs/application/admin/view/article/category/add.html
+++ b/blogs/application/admin/view/article/category/add.html
@@ -4,10 +4,9 @@
     <div class="form-group">
         <label for="c-pid" class="control-label col-xs-12 col-sm-2">{:__('父亲')}:</label>
         <div class="col-xs-12 col-sm-8">
-
             <select id="c-pid" data-rule="required" class="form-control selectpicker" name="row[pid]">
                 {foreach name="parentList" item="vo"}
-                <option data-type="{$vo.type}" value="{$key}" {in name="key" value=""}selected{/in}>{$vo.name}</option>
+                <option  value="{$key}">{$vo.name}</option>
                 {/foreach}
             </select>
 
