--- a/blogs/application/admin/view/article/article/add.html
+++ b/blogs/application/admin/view/article/article/add.html
@@ -44,6 +44,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="c-type" class="control-label col-xs-12 col-sm-2">{:__('文章类型')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            {:Form::select('row[type]', $typeList, '', ['data-rule'=>'required'])}
+        </div>
+    </div>
+    <div class="form-group">
         <label for="c-content" class="control-label col-xs-12 col-sm-2">{:__('内容')}:</label>
         <div class="col-xs-12 col-sm-8">
             <textarea  class="form-control editor" name="row[content]"  id="c-content"></textarea>
